# proxyswitcher-tun2http

./: .gitignore  CMakeLists.txt  README.md
include/: proxyswitcher_tun2http.h
scripts/: build-android.sh  build-ios.sh
src/: dhcp.c  dns.c  http.c  icmp.c  tcp.c  tun2http.c  tun2http.h  udp.c
src/ios_shim/: stub.c
tests/: test_common.h  test_dns.c  test_http.c  test_main.c  test_stubs.c  test_util.c
